--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -10,7 +10,15 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "-   A general assumption would be that if more resources are spent on something, the better its performance should be. This dataset, however, presents an opposite finding. The schools with the lowest spending ranges (less than $585 per student) delivered better average math and reading scores as well as better passing rates for students overall and in both math and reading. These schools not only had lower per student budget, but their overall total budgets were also lesser compared to other schools in the district.\n",
+    "\n",
+    "-\tSmall-sized (less than 1000 students) and medium-sized (1000 to 2000 students) had almost similar average scores (about 83 for both math and reading) and passing rates (about 93% for math, 96% for reading, and 90% overall). These schools outperformed the large-sized schools (2000 to 5000 students) especially in terms of passing scores.\n",
+    "\n",
+    "-\tCharter schools clearly outperformed the District schools by having higher average scores as well as passing rates. The top 5 best performing schools based on overall scores are Charter whereas the bottom 5 are District. This could be attributable to the fact that charter schools have lesser number of students but no significant correlation can be drawn from the provided data to support this reasoning.\n",
+    "\n",
+    "-\tStudents in all grades had almost similar academic performance across all categories.\n",
+    "\n",
+    "-\tOverall, students tend to perform better in reading (79%-97%) as compared to maths (65%-94%) in terms of passing scores. The overall passing rates (52%-91%) are comparatively lower than the average of passing rates for math and reading. This implies that not all the students scoring 70 or higher in math are scoring the same in reading and vice versa.\n",
     " "
    ]
   },
